From In Memory Db to real DB

--- a/EcommerceApi/appsettings.json
+++ b/EcommerceApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=127.0.0.1;user id=devuser;password=C@p!+4oSp0k3;port=3306;database=ecommerce;"
+  },
   "AllowedHosts": "*"
 }
