--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ INFO.txt
 ~$*.*
 appsettings.Development.json
 appsettings.json
+**.swp
 
 #################################################################################
 ## Ignore Visual Studio temporary files, build results, and
